# test-cli-dk

./: pyproject.toml
test_cli/: tools.py
