[tool.poetry]
name = "test-cli"
version = "0.1.0"
description = ""
authors = ["domenico-simone <dome.simone@gmail.com>"]
readme = "README.md"
packages = [{include = "test_cli"}]

[tool.poetry.dependencies]
python = "^3.9"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello_dK = "test_cli.tools:hello_world"
hi_dK = "test_cli.tools:hi_everyone"